--- a/package.xml
+++ b/package.xml
@@ -13,6 +13,7 @@
   <build_depend>sensor_msgs</build_depend>
   <build_depend>geometry_msgs</build_depend>
   <build_depend>tf</build_depend>
+  <build_depend>matlab_cpp_interface</build_depend>
  
   <run_depend>message_filters</run_depend>
   <run_depend>laser_assembler</run_depend>
@@ -23,7 +24,7 @@
   <run_depend>sick_tim</run_depend>
   <run_depend>std_msg</run_depend>
   <run_depend>tf</run_depend> 
-
+  <run_depend>matlab_cpp_interface</run_depend> 
 
   <!-- The export tag contains other, unspecified, tags -->
   <export>
